# store_1

./: CMakeLists.txt  README.md  recstore_config.json  recstore_config_generator.py
src/: CMakeLists.txt  recstore_config.h.in
src/base/: CMakeLists.txt  array.h  base.h  bind_core.cc  bind_core.h  common.h  counter.cc  counter.h  cu_utils.cuh  cuda.h  cudaEvent.h  debug_utils.h  flatc.h  hashtable.h  json.h  lf_list.h  lock.h  log.h  math.h  pprint.cc  pprint.h  pq.h  pybind_timer.cc  queue.h  robin_hood.h  shm_helper.cc  shm_helper.h  sleep.h  tensor.h  test_pq.cc  timer.h  zipf.h
src/base_ps/: CMakeLists.txt  Postoffice.cc  base_client.h  base_ps_server.h  cache_ps_impl.h  config.cc  parameters.cpp  parameters.h
src/benchmark/: benchmark_client_common.h  parse_dataset.h
src/executable/: perf_emb.py  perf_emb_pytorch.py  test_emb.py  test_multicard.py
src/executable/dlrm/: create_mini_dataset.py  data_utils.py  dlrm_data_pytorch.py  dlrm_model.py  extend_distributed.py  perf_rec_model.py  rec_dataloader.py
src/executable/kg/: dgl-ke-main.py
src/executable/test/: test_IPCGPUTensor.py  test_IPCTensor.py  test_argparse.py  test_custom_opt.py  test_gpu_cache.py  test_multiprocess_shm.py  test_torchcpp.py  test_utils.py
src/executable/uvm/: CMakeLists.txt  intercept.cpp  uvm_libtorch.cc
src/framework/: CMakeLists.txt  op.cc  op.h  recstore.cc
src/framework/frugal/: CMakeLists.txt  IPCTensor.cc  IPCTensor.h  IPC_barrier.cc  IPC_barrier.h  cpu_embedding.h  grad_async_v1.h  grad_async_v2 copy.h  grad_async_v2.h  grad_base.h  grad_memory_manager.h  kg_controller.cc  kg_controller.h  kg_controller_test.cc  merge.cu  parallel_pq.h  parallel_pq_v2.h  recstore_gpu_cache.h  recstore_pytorch.cc  recstore_pytorch.cu  test_ppq.cc  torch_utils.cc  torch_utils.h
src/framework/hugectr/: op_hugectr.cc  op_hugectr.h
src/framework/pytorch/: CMakeLists.txt  op_torch.cc
src/framework/pytorch/python_client/: client.py  client_test.py
src/framework/tensorflow/: op_tensorflow.cc
src/framework/tensorflow/python_client/: client.py  client_test.py
src/gpu_memory/: CMakeLists.txt  mapping_device_memory.cuh  memory_pool.cu.cc  memory_pool.h  test_gdr_size.cu
src/gpu_memory/gdrcopy/: insmod.sh
src/gpu_memory/gdrcopy/src/: libgdrapi.so.2
src/gpu_memory/gdrcopy/src/gdrdrv/: .Module.symvers.cmd  (+18 more)
src/gpu_memory/gdrcopy/tests/: apiperf  copybw  copylat  sanity
src/grpc_ps/: CMakeLists.txt  dist_grpc_ps_client.cpp  dist_grpc_ps_client.h  dist_grpc_ps_client_test.cpp  grpc_ps_client.cpp  grpc_ps_client.h  grpc_ps_client_pytorch.cpp  grpc_ps_client_test.cpp  grpc_ps_server.cpp  grpc_ps_server_async.cpp  grpc_ps_server_async.h  provider.h
src/grpc_ps/proto/: CMakeLists.txt  ps.proto
src/grpc_ps/python_client/: Adagrad.py  DistEmb.py  DistTensor.py  EmbBag.py  PsKvstore.py  Test.py  client2.py  dataset.py  init_server.py  loadGenerator.py  load_client.py  multi_client.py  python_client_test.py  test_be.py  utils.py
src/kg/: CMakeLists.txt
src/kg/kg/: dgl-ke.patch  diff.sh  install_dgl.sh  patch.sh
src/kg/protos/: CMakeLists.txt  IPCGPUMemoryHandle.proto
src/kg/scripts/: bench.py  bench_base.py  bench_util.py  clean_unsuccess_log.py  exp_config.py  lock.sh  lock_mc.sh  test_mc.py  variables.py
src/memory/: epoch_manager.h  malloc.h  persist_malloc.cc  persist_malloc.h  shm_file.h
src/python/pytorch/recstore/: DistEmb.py  DistOpt.py  DistTensor.py  KVClient.py  PsKvstore.py  __init__.py  client.py  controller_process.py  mini_test.py  recstore_settings.py  torch_op.py  utils.py
src/python/pytorch/torchrec/: EmbeddingBag.py
src/rdma_ps/: CMakeLists.txt  base_client.h  petps_client.cc  petps_client.h  petps_server copy.cc  petps_server.cc
src/small_tests/: CMakeLists.txt  sparse_coo.ipynb  test_d2d_bandwidth.cu  test_ddp.py  test_h2d_bandwidth.cu  test_multi_thread_cht.cc  test_torch_emb.py  test_uva_h2d.cu  test_uva_multigpu.cu  torch_emb.ipynb
src/small_tests/perf_uva/: CMakeLists.txt  DoneFile  analyze.ipynb  batch.py  goruped.csv  perf_uva.cu  result.csv  temp.csv
src/small_tests/test_gpu_driver_component/: gpreempt.h  test_print.cu
src/storage/: CMakeLists.txt
src/storage-old/: CMakeLists.txt
src/storage-old/gpu_cache/: CMakeLists.txt  nv_gpu_cache.cu  nv_util.h  static_hash_table.cu  static_hash_table.hpp  static_table.hpp  uvm_table.cu  uvm_table.hpp
src/storage-old/gpu_ssd/: BaMWrapper.cu  BaMWrapper.h  CMakeLists.txt  RawGDWrapper.cu  RawGDWrapper.h  convert_file_to_float_array.cc  interface.h  perf_BaM.cu  perf_RawGD.cu  test_BaM.cu  test_RawGD.cu
src/storage-old/gpu_ssd/array/: CMakeLists.txt  cuda-test.cu  main.cu  settings.h
src/storage-old/gpu_ssd/old_version/: CMakeLists.txt  main.cu  old_GPUSpdkWrapper.h
src/storage-old/kv_engine/: CMakeLists.txt  base_kv.h  benchmark_kv_engine.cc  benchmark_zipf.cc  engine_double_desk.h  engine_fake.h  engine_pethash.h  kv_engine_register.cc  load_db.h
src/storage-old/nvm/pet_kv/: pet_hash.h
src/storage-old/ssd/: CMakeLists.txt  conaiveKVell.h  hello_world.cpp  naiveKVell.h  spdk_wrapper.cc  spdk_wrapper.h  test_spdk_wrapper.cc  test_ssd_kv.cpp
src/storage/dram/: CMakeLists.txt
src/storage/dram/src/: extendible_hash.cpp  extendible_hash.h  hash.h
src/storage/dram/util/: hash.h  pair.h  persist.h  timer.h
src/storage/gpu_cache/: gpu_cache_api.hpp  gpu_cache_nohash.cu  gpu_cache_nohash.h  nv_gpu_cache.hpp  static_table.cu
src/storage/kv_engine/: CMakeLists.txt  base_kv.h  benchmark_kv_engine.cc  benchmark_zipf.cc  engine_extendiblehash.h  engine_map.h  engine_pethash.h  kv_engine_register.cc  load_db.h
src/storage/nvm/: CMakeLists.txt
src/storage/nvm/pet_kv/: CMakeLists.txt  PiBenchWrapper.cc  persistence.h  pet_hash.h  pet_kv.cc  pet_kv.h  shm_common.h
src/storage/ssd/: conaiveKVell.h  hello_world.cpp  naiveKVell.h  perf_spdk.cc  perf_spdkkvell_from_gpu.cu  rocksdb_wrapper.h  spdk_wrapper.cc  spdk_wrapper.h  test_naiveKvell.cc  test_spdk_wrapper.cc  test_ssd_kv.cpp
src/test/: CMakeLists.txt  corotine.cpp  corotine2.cpp  test_f14_slab.cpp  test_hash_map.cpp  test_hugectr_emb.cpp
(+44 files in other folders)
